--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
 <body onload="myfunction()">
     <div id="loader">
-        <!-- <img src="./download.png" alt="Loading..."> -->
-        <lottie-player src="./LottieJson/Loader.json" background="transparent" speed="1"
+        <lottie-player id="loader"  src="./LottieJson/Loader.json" background="transparent" speed="1"
             style="width: 100vw; height: 100vh;" loop autoplay></lottie-player>
     </div>
     <div class="Home">
