--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </head>
 
 <body onload="myfunction()">
-    <div id="loader">
+    <!-- <div id="loader">
         <lottie-player id="loader"  src="./LottieJson/Loader.json" background="transparent" speed="1"
             style="width: 100vw; height: 100vh;" loop autoplay></lottie-player>
-    </div>
+    </div> -->
     <div class="Home">
         <section class="section1">
             <div class="navbar">
