Ui updated,service section completed

--- a/index.html
+++ b/index.html
@@ -141,26 +141,8 @@
             <div class="servicelist">
                 <div class="serviceitemcard">
                     <div class="image">
-                        <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_ujvyzbbd.json" background="transparent" speed="1" loop
-                            style="max-width: 180px;" autoplay></lottie-player>
-                    </div>
-                    <div class="title">
-                        <h2>
-                            Facebook and
-                            Instagram Ads
-                        </h2>
-                    </div>
-                    <div>
-                        <p>
-                            Reach your target audience effectively and maximize your brand's visibility through
-                            strategic advertising campaigns on Facebook and Instagram.
-                        </p>
-                    </div>
-                </div>
-                <div class="serviceitemcard">
-                    <div class="image">
-                        <lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_29gwi53x.json" background="transparent" speed="1" loop
-                            style="max-width: 180px;" autoplay></lottie-player>
+                        <lottie-player src="https://assets6.lottiefiles.com/private_files/lf30_29gwi53x.json"
+                            background="transparent" speed="1" loop style="max-width: 180px;" autoplay></lottie-player>
                     </div>
                     <div class="title">
                         <h2>
@@ -177,8 +159,8 @@
                 </div>
                 <div class="serviceitemcard">
                     <div class="image">
-                        <lottie-player src="./LottieJson/influencemarketing.json" background="transparent" speed="1" loop
-                            style="max-width: 180px;" autoplay></lottie-player>
+                        <lottie-player src="./LottieJson/influencemarketing.json" background="transparent" speed="1"
+                            loop style="max-width: 180px;" autoplay></lottie-player>
                     </div>
                     <div class="title">
                         <h2>
@@ -210,6 +192,115 @@
                             Make a lasting impression with visually stunning and impactful creative designs and posters.
                             Our talented team of designers will bring your brand to life through eye-catching graphics,
                             compelling typography, and engaging imagery.
+                        </p>
+                    </div>
+                </div>
+                <div class="serviceitemcard">
+                    <div class="image">
+                        <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_ujvyzbbd.json"
+                            background="transparent" speed="1" loop style="max-width: 180px;" autoplay></lottie-player>
+                    </div>
+                    <div class="title">
+                        <h2>
+                            Social Media Management
+                        </h2>
+                    </div>
+                    <div>
+                        <p>
+                            Take your brand's online presence to new heights with our comprehensive social media
+                            management services. Our team will handle all aspects of your social media
+                            accounts, including content creation, scheduling, engagement, and analytics.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="serviceitemcard">
+                    <div class="image">
+                        <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_yswp4uj3.json"
+                            background="transparent" speed="1" loop style="max-width: 180px;" autoplay></lottie-player>
+                    </div>
+                    <div class="title">
+                        <h2>
+                            Press release
+                        </h2>
+                    </div>
+                    <div>
+                        <p>
+                            Get the word out about your company's latest news, events, or announcements with a
+                            professionally crafted press release. Our skilled team of writers will create a compelling
+                            and informative press release.
+                        </p>
+                    </div>
+                </div>
+                <div class="serviceitemcard">
+                    <div class="image">
+                        <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_riycdgbe.json"
+                            background="transparent" speed="1" loop style="max-width: 180px;" autoplay></lottie-player>
+                    </div>
+                    <div class="title">
+                        <h2>
+                            WhatsApp API
+                        </h2>
+                    </div>
+                    <div>
+                        <p>
+                            Integrate the power of WhatsApp into your business operations with our WhatsApp API
+                            services. Seamlessly connect with your customers, automate messaging, and enhance customer
+                            engagement using the world's most popular messaging app.
+                        </p>
+                    </div>
+                </div>
+                <div class="serviceitemcard">
+                    <div class="image">
+                        <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_hi95bvmx/WebdesignBg.json"
+                            background="transparent" speed="1" loop style="max-width: 180px;" autoplay></lottie-player>
+                    </div>
+                    <div class="title">
+                        <h2>
+                            Landing page
+                        </h2>
+                    </div>
+                    <div>
+                        <p>
+                            Create a captivating first impression and convert visitors into customers with a
+                            professionally designed landing page. Our expert team will craft a visually appealing and
+                            user-friendly landing page that drives conversions and achieves your marketing goals.
+                        </p>
+                    </div>
+                </div>
+                <div class="serviceitemcard">
+                    <div class="image">
+                        <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_kftzxh2c.json"
+                            background="transparent" speed="1" loop style="max-width: 180px;" autoplay></lottie-player>
+                    </div>
+                    <div class="title">
+                        <h2>
+                            App Development
+                        </h2>
+                    </div>
+                    <div>
+                        <p>
+                            Turn your vision into reality with our professional app development services. Our skilled
+                            team of developers will work closely with you to understand your requirements and create a
+                            customized mobile or web application that meets your business objectives.
+                        </p>
+                    </div>
+                </div>
+                <div class="serviceitemcard">
+                    <div class="image">
+                        <lottie-player src="./LottieJson/Meta.json" background="transparent" speed="1" loop
+                            style="max-width: 180px;" autoplay></lottie-player>
+                    </div>
+                    <div class="title">
+                        <h2>
+                            Facebook and
+                            Instagram Ads
+                        </h2>
+                    </div>
+                    <div>
+                        <p>
+                            Reach your target audience effectively and maximize your brand's visibility through
+                            strategic advertising campaigns on Facebook and Instagram.
                         </p>
                     </div>
                 </div>
