Ui fixes,Client slider Completed

--- a/index.html
+++ b/index.html
@@ -272,13 +272,85 @@
                 </div>
             </div>
         </section>
+        <div class="sliderx">
+            <h2>Our Client</h2>
+            <br>
+            <div class="slide-track">
+                <div class="slide">
+                    <h2>Cockpit Crush
+                    </h2>
+                    <img src="./assets/ClientSlider/162346712_891841481602980_2870826677278753981_n.jpg" alt="" />
+                    <div class="title">
+                        <h2>Clothing</h2>
+                    </div>
+              <!-- <h2>auhx</h2> -->
+                </div>
+                <div class="slide">
+                    <h2>Kifaish</h2>
+                    <img src="./assets/ClientSlider/245085769_291086689559378_74517299251065721_n.jpg" alt="" />
+                    <div class="title">
+                        <h2>Fashion</h2>
+                    </div>
+                </div>
+                <div class="slide">
+                    <h2>Prephero
+                    </h2>
+                    <img src="./assets/ClientSlider/291845973_3254046618176514_6392064419233912566_n.jpg"  alt="" />
+                    <div class="title">
+                        <h2>Education</h2>
+                    </div>
+                </div>
+                <div class="slide">
+                    <h2>Uni Liv
+                    </h2>
+                    <img src="./assets/ClientSlider/307644496_124931820321320_1632746269873349067_n.jpg"  alt="" />
+                    <div class="title">
+                        <h2>PG&Hostle</h2>
+                    </div>
+                </div>
+                <div class="slide">
+                    <h2>Vedasthu Guru
+                    </h2>
+                    <img src="./assets/ClientSlider/331581288_1881097192245033_4216929470999956074_n.jpg"  alt="" />
+                    <div class="title">
+                        <h2>Astrology</h2>
+                    </div>
+                </div>
+                <div class="slide">
+                    <h2> Byko Journeys
+                    </h2>
+                    <img src="./assets/ClientSlider/Byko-journey-logo-.png" alt="" />
+                    <div class="title">
+                        <h2>Travel</h2>
+                    </div>
+                </div>
+                <div class="slide">
+                    <h2>Healthcare</h2>
+                    <img src="./assets/ClientSlider/logo avon png.PNG"alt="" />
+                    <div class="title">
+                        <h2>Aviation</h2>
+                    </div>
+                </div>
+                <div class="slide">
+                    <h2>Ayurveda Yogashram</h2>
+                    <img src="./assets/ClientSlider/WhatsApp Image 2023-05-13 at 12.48.10 PM.jpeg.jpg" alt="" />
+                    <div class="title">
+                        <h2>Healthcare</h2>
+                    </div>
+                </div>
+               
+            </div>
+            <br>
+            <br>
+        </div>
     </div>
 </body>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <!-- <script src="./typed.js-master/lib/typed.min.js"> -->
-</script>
+<!-- </script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="js/typed.js"></script>
 <script src="js/App.js"></script>
+
 
 </html>
