--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <br>
             <br>
         </div>
-        <section >
+        <section>
             <footer>
                 <div class="row primary">
                     <div class="column about">
@@ -410,7 +410,7 @@
                     </div>
 
                     <div class="column subscribe">
-                         <p>Copyright &copy; DivyaSrishti
+                        <p>Copyright &copy; DivyaSrishti
                             Digital 2023</p>
                         <!-- <div>
                             <input type="email" placeholder="Your email id here" />
@@ -434,9 +434,24 @@
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <!-- <script src="./typed.js-master/lib/typed.min.js"> -->
 <!-- </script> -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
 <script src="js/typed.js"></script>
-<script src="js/App.js"></script>
-
+<!-- <script src="js/App.js"></script> -->
+<script>
+    var typed = new Typed(".text-slider", {
+        strings: [
+            "Leads",
+            "profit",
+            "Sales",
+        ],
+        typeSpeed: 90,
+        backSpeed: 60,
+        loop: true
+    });
+    function myfunction() {
+        var preloader = document.getElementById('loader');
+        preloader.style.display = 'none';
+    }
+</script>
 
 </html>
