--- a/index.html
+++ b/index.html
@@ -435,8 +435,10 @@
 <!-- <script src="./typed.js-master/lib/typed.min.js"> -->
 <!-- </script> -->
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
-<script src="js/typed.js"></script>
+
 <!-- <script src="js/App.js"></script> -->
+<!-- <script src="js/typed.js"></script> -->
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 <script>
     var typed = new Typed(".text-slider", {
         strings: [
@@ -453,5 +455,4 @@
         preloader.style.display = 'none';
     }
 </script>
-
 </html>
