Partner section added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
 
                 </div>
-                <button>
+                <button id="contactus">
 
                     <a href="">Contact Us</a>
 
@@ -69,7 +69,7 @@
             </div>
         </section>
         <div class="sliderx">
-            <h2>Our Client</h2>
+            <h2>Our Clients</h2>
             <br>
             <div class="slide-track">
                 <div class="slide">
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <h2>Avon Trvels</h2>
+                    <h2>Avon Travels</h2>
                     <img src="./assets/ClientSlider/logo avon png.PNG" alt="" />
                     <div class="title">
                         <h2>Aviation</h2>
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <h2>Avon Trvels</h2>
+                    <h2>Avon Travels</h2>
                     <img src="./assets/ClientSlider/logo avon png.PNG" alt="" />
                     <div class="title">
                         <h2>Aviation</h2>
@@ -245,7 +245,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <h2>Avon Trvels</h2>
+                    <h2>Avon Travels</h2>
                     <img src="./assets/ClientSlider/logo avon png.PNG" alt="" />
                     <div class="title">
                         <h2>Aviation</h2>
@@ -307,7 +307,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <h2>Avon Trvels</h2>
+                    <h2>Avon Travels</h2>
                     <img src="./assets/ClientSlider/logo avon png.PNG" alt="" />
                     <div class="title">
                         <h2>Aviation</h2>
@@ -369,7 +369,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <h2>Avon Trvels</h2>
+                    <h2>Avon Travels</h2>
                     <img src="./assets/ClientSlider/logo avon png.PNG" alt="" />
                     <div class="title">
                         <h2>Aviation</h2>
@@ -431,7 +431,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <h2>Avon Trvels</h2>
+                    <h2>Avon Travels</h2>
                     <img src="./assets/ClientSlider/logo avon png.PNG" alt="" />
                     <div class="title">
                         <h2>Aviation</h2>
@@ -493,7 +493,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <h2>Avon Trvels</h2>
+                    <h2>Avon Travels</h2>
                     <img src="./assets/ClientSlider/logo avon png.PNG" alt="" />
                     <div class="title">
                         <h2>Aviation</h2>
@@ -555,7 +555,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <h2>Avon Trvels</h2>
+                    <h2>Avon Travels</h2>
                     <img src="./assets/ClientSlider/logo avon png.PNG" alt="" />
                     <div class="title">
                         <h2>Aviation</h2>
@@ -582,7 +582,7 @@
             <div class="servicelist">
                 <div class="serviceitemcard">
                     <div class="image">
-                        <lottie-player src="./LottieJson/Meta.json" background="transparent" speed="1" loop
+                        <lottie-player src="./LottieJson/Meta.json" background="transparent" speed="2" loop
                             style="max-width: 180px;" autoplay></lottie-player>
                     </div>
                     <div class="title">
@@ -781,6 +781,20 @@
             </div>
             <br>
         </section>
+        <section class="certified">
+            <div class="heading">
+                <h2>Platform partners </h2>
+                <br>
+                <div class="images">
+                    <img src="./assets/PlatformPartners/aisensy.webp" alt="">
+                    <img src="./assets/PlatformPartners/Cashfree.png" alt="">
+                    <img src="./assets/PlatformPartners/facebook.webp" alt="">
+                    <img src="./assets/PlatformPartners/Google.png" alt="">
+                    <img src="./assets/PlatformPartners/razorpay.webp" alt="">
+                    <img src="./assets/PlatformPartners/shopify.png" alt="">
+                </div>
+            </div>
+        </section>
         <section>
             <footer>
                 <div class="row primary">
@@ -814,7 +828,7 @@
                         <ul>
 
                             <li>
-                                <a href="#faq">Facebook and Instagram Ads</a>
+                                <a href=".services">Facebook and Instagram Ads</a>
                             </li>
                             <li>
                                 <a href="#cookies-policy">Google ads</a>
@@ -834,11 +848,11 @@
                         <h3>Some Links</h3>
                         <ul>
                             <li>
-                                <a href="#faq">F.A.Q</a>
+                                <a href="#faq">Contact Us</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="#cookies-policy">Cookies Policy</a>
-                            </li>
+                            </li> -->
                             <li>
                                 <a href="#terms-of-services">Terms Of Service</a>
                             </li>
@@ -867,16 +881,11 @@
                 </div>
             </footer>
         </section>
+        
 
     </div>
 </body>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-<!-- <script src="./typed.js-master/lib/typed.min.js"> -->
-<!-- </script> -->
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
-
-<!-- <script src="js/App.js"></script> -->
-<!-- <script src="js/typed.js"></script> -->
 <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 <script>
     var typed = new Typed(".text-slider", {
