Gstin number added,client changes

--- a/index.html
+++ b/index.html
@@ -808,10 +808,7 @@
                             Digital</h3>
 
                         <p>
-                            2253
-                            Opp DPS Sector 40C
-                            Chandigarh
-                            160036
+                            Jabalpur, Madhya Pradesh, <br>482011
                         </p>
 
                         <div class="social">
@@ -866,8 +863,14 @@
                     </div>
 
                     <div class="column subscribe">
-                        <p>Copyright &copy; DivyaSrishti
-                            Digital 2023</p>
+                        <br>
+                        <p>Hemlata Singh</p>
+                            
+                            <br>
+
+                            <p>
+                                Gst No:  23BEJPS0478C1ZL
+                            </p>
                         <!-- <div>
                             <input type="email" placeholder="Your email id here" />
                             <button>Subscribe</button>
