Client fixes,About page added,About Lottie animation added

--- a/Contactus.html
+++ b/Contactus.html
@@ -15,17 +15,21 @@
 <body>
     <div class="Home">
         <div class="navbar">
-            <div class="navlogo">
 
-                <div class="logo">
-                    <img src="/assets/iconlogo-removebg-preview.png" alt="logo">
-                </div>
-                <div class="title">
-                    <h1 class="animate-charcter">DivyaSrishti</h1>
-                    <h1 class="animate-charcter"> Digital</h1>
-                </div>
+            <a class="indexreload" href="index.html">
 
-            </div>
+                <div class="navlogo">
+
+                    <div class="logo">
+                        <img src="/assets/iconlogo-removebg-preview.png" alt="logo">
+                    </div>
+                    <div class="title">
+                        <h1 class="animate-charcter">DivyaSrishti</h1>
+                        <h1 class="animate-charcter"> Digital</h1>
+                    </div>
+
+                </div>
+            </a>
             <!-- <button id="contactus">
 
                 <a href="">Contact Us</a>
@@ -67,19 +71,20 @@
                             <input type="text" placeholder="Enter your email">
                         </div>
                         <div class="input-box">
-                            <input type="tel" placeholder="Enter your number" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
-                        <div class="input-box message-box">
-                            <textarea name="" placeholder="Enter your Message" id="" cols="30" rows="10"></textarea>
-                            <!-- <input type="text" placeholder="Enter your Message"> -->
-                        </div>
-                        <div class="button">
-                            <input type="button" value="Send Now">
-                        </div>
+                            <input type="tel" placeholder="Enter your number" id="phone" name="phone"
+                                pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+                            <div class="input-box message-box">
+                                <textarea name="" placeholder="Enter your Message" id="" cols="30" rows="10"></textarea>
+                                <!-- <input type="text" placeholder="Enter your Message"> -->
+                            </div>
+                            <div class="button">
+                                <input type="button" value="Send Now">
+                            </div>
                     </form>
                 </div>
             </div>
-    </div>
-    
+        </div>
+
     </div>
     <section>
         <footer>
@@ -91,15 +96,12 @@
                         Digital</h3>
 
                     <p>
-                        2253
-                        Opp DPS Sector 40C
-                        Chandigarh
-                        160036
+                        Jabalpur, Madhya Pradesh, <br>482011
                     </p>
 
                     <div class="social">
-                        <a href="https://api.whatsapp.com/send/?phone=%2B919343504739&text&type=phone_number&app_absent=0" target="_blank"><i class="fa fa-whatsapp"
-                                aria-hidden="true"></i></a>
+                        <a href="https://api.whatsapp.com/send/?phone=%2B919343504739&text&type=phone_number&app_absent=0"
+                            target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
 
                         <!-- <i class="fa-brands fa-instagram-square"></i>
                         <i class="fa-brands fa-twitter-square"></i>
@@ -133,6 +135,9 @@
                 <div class="column links">
                     <h3>Some Links</h3>
                     <ul>
+                        <li>
+                            <a href="Aboutus.html">About Us</a>
+                        </li>
                         <li>
                             <a href="Contactus.html">Contact Us</a>
                         </li>
