--- a/index.html
+++ b/index.html
@@ -24,17 +24,20 @@
     <div class="Home">
         <section class="section1">
             <div class="navbar">
-                <div class="navlogo">
+                <a class="indexreload" href="index.html">
 
-                    <div class="logo">
-                        <img src="/assets/iconlogo-removebg-preview.png" alt="logo">
-                    </div>
-                    <div class="title">
-                        <h1 class="animate-charcter">DivyaSrishti</h1>
-                        <h1 class="animate-charcter"> Digital</h1>
-                    </div>
+                    <div class="navlogo">
 
-                </div>
+                        <div class="logo">
+                            <img src="/assets/iconlogo-removebg-preview.png" alt="logo">
+                        </div>
+                        <div class="title">
+                            <h1 class="animate-charcter">DivyaSrishti</h1>
+                            <h1 class="animate-charcter"> Digital</h1>
+                        </div>
+
+                    </div>
+                </a>
                 <button id="contactus">
 
                     <a href="Contactus.html">Contact Us</a>
@@ -848,6 +851,9 @@
                         <h3>Some Links</h3>
                         <ul>
                             <li>
+                                <a href="Aboutus.html">About Us</a>
+                            </li>
+                            <li>
                                 <a href="Contactus.html">Contact Us</a>
                             </li>
                             <!-- <li>
@@ -865,12 +871,12 @@
                     <div class="column subscribe">
                         <br>
                         <p>Hemlata Singh</p>
-                            
-                            <br>
 
-                            <p>
-                                Gst No:  23BEJPS0478C1ZL
-                            </p>
+                        <br>
+
+                        <p>
+                            Gst No: 23BEJPS0478C1ZL
+                        </p>
                         <!-- <div>
                             <input type="email" placeholder="Your email id here" />
                             <button>Subscribe</button>
