ABout page updated

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -41,19 +41,181 @@
             </div>
             <div class="homecontent">
                 <div class="leftx">
-                   <h2>
-                    <span>At Divyasrishti Digital,</span> we redefine digital success through a prism of innovation, strategy, and unwavering commitment. As pioneers in performance marketing, WhatsApp mastery, captivating landing pages, transformative branding, and PR wizardry, we craft digital experiences that resonate and endure.
+                    <h2>
+                        <span>At Divyasrishti Digital,</span> we redefine digital success through a prism of innovation,
+                        strategy, and unwavering commitment. As pioneers in performance marketing, WhatsApp mastery,
+                        captivating landing pages, transformative branding, and PR wizardry, we craft digital
+                        experiences that resonate and endure.
 
-                   </h2>
+                    </h2>
 
                 </div>
                 <div class="right">
-                    <lottie-player id="my-lottie" src="./LottieJson/aboutusanimation.json" background="transparent" speed="1"
-                        autoplay></lottie-player>
+                    <lottie-player id="my-lottie" src="./LottieJson/aboutusanimation.json" background="transparent"
+                        speed="1" autoplay></lottie-player>
                 </div>
             </div>
         </section>
+
+        <!-- <section class="section2">
+            <h2>Why Choose us?</h2>
+            <div class="services">
+                
+            </div>
+        </section> -->
+        <section class="descnew">
+            <div class="main">
+
+
+                <div class="left">
+                    <div class="descsvg">
+                        <lottie-player src="./LottieJson/descabout.json" background="transparent" speed="1" loop
+                            autoplay></lottie-player>
+                    </div>
+                </div>
+                <div class="right">
+                    <!-- <p>About trip</p> -->
+                    <h2>💡 Why Choose DS Digital?
+                    </h2>
+                    <br>
+                    <p>
+                        <b> Performance Pioneers:</b> Witness the transformation as we turn data into dynamic results,
+                        optimizing every campaign for maximum impact.
+                        <br>
+                        <b> WhatsApp Mastery:</b> We don't just market; we engage. Our WhatsApp strategies are
+                        personalized
+                        conversations that build relationships and drive conversions.
+                        <br>
+                        <b> Landing Page Alchemy:</b> Crafting landing pages that captivate, convert, and leave an
+                        indelible
+                        mark on your audience.
+                        <br>
+                        <b> Branding Brilliance:</b> Elevate your brand story with our creative prowess, carving a
+                        unique
+                        identity in the digital realm.
+                        <br>
+                        <b> PR Wizards:</b> From storytelling to crisis management, we orchestrate narratives that
+                        resonate and
+                        capture attention.
+                        <br>
+                        <br>
+
+                        Embark on a journey where digital possibilities unfold. Collaborate with Divyasrishti Digital,
+                        and let's sculpt success in the digital landscape. Your vision, our expertise – a partnership
+                        that goes beyond the ordinary.
+
+
+                    </p>
+                    <br>
+                    <button>
+                        <a
+                            href="https://api.whatsapp.com/send/?phone=%2B919343504739&text&type=phone_number&app_absent=0"><i
+                                class="fa fa-whatsapp" aria-hidden="true"></i>
+                            Contact us</a>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section>
+            <section class="tag">
+                <div class="tagline">
+                    🤝 Let's Shape Success Together: Partner with Divyasrishti Digital
+    
+                </div>
+            </section>
+            <footer>
+                <div class="row primary">
+                    <div class="column about">
+
+                        <h3>
+                            DivyaSrishti
+                            Digital</h3>
+
+                        <p>
+                            Jabalpur, Madhya Pradesh, <br>482011
+                        </p>
+
+                        <div class="social">
+                            <a href="https://api.whatsapp.com/send/?phone=%2B919343504739&text&type=phone_number&app_absent=0"
+                                target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+
+                            <!-- <i class="fa-brands fa-instagram-square"></i>
+                            <i class="fa-brands fa-twitter-square"></i>
+                            <i class="fa-brands fa-youtube-square"></i>
+                            <i class="fa-brands fa-whatsapp-square"></i> -->
+                        </div>
+                    </div>
+
+                    <div class="column links">
+                        <h3>Our Popular Services</h3>
+
+                        <ul>
+
+                            <li>
+                                <a href=".services">Facebook and Instagram Ads</a>
+                            </li>
+                            <li>
+                                <a href="#cookies-policy">Google ads</a>
+                            </li>
+                            <li>
+                                <a href="#terms-of-services">Landing Page</a>
+                            </li>
+                            <li>
+                                <a href="#support">Design</a>
+                            </li>
+                        </ul>
+
+                    </div>
+
+
+                    <div class="column links">
+                        <h3>Some Links</h3>
+                        <ul>
+                            <li>
+                                <a href="Aboutus.html">About Us</a>
+                            </li>
+                            <li>
+                                <a href="Contactus.html">Contact Us</a>
+                            </li>
+                            <!-- <li>
+                                <a href="#cookies-policy">Cookies Policy</a>
+                            </li> -->
+                            <li>
+                                <a href="#terms-of-services">Terms Of Service</a>
+                            </li>
+                            <li>
+                                <a href="#support">Support</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="column subscribe">
+                        <br>
+                        <p>Hemlata Singh</p>
+
+                        <br>
+
+                        <p>
+                            Gst No: 23BEJPS0478C1ZL
+                        </p>
+                        <!-- <div>
+                            <input type="email" placeholder="Your email id here" />
+                            <button>Subscribe</button>
+                        </div> -->
+
+                    </div>
+
+                </div>
+
+                <div class="row copyright">
+
+                    <p>Copyright &copy; DivyaSrishti
+                        Digital 2023</p>
+                </div>
+            </footer>
+        </section>
     </div>
+
 </body>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
