client script added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             style="width: 100vw; height: 100vh;" loop autoplay></lottie-player>
     </div> -->
     <div class="Home">
+        <!-- <div class="topbar">
+            <a href="tel:+91-93435 04739"> <i class="fa fa-phone" aria-hidden="true"></i> <span> +91 93435
+                    04739</span></a>
+        </div> -->
         <section class="section1">
             <div class="navbar">
                 <a class="indexreload" href="index.html">
@@ -1113,6 +1117,7 @@
 
     </div>
 </body>
+<script type="text/javascript" src="https://web.whizchat.io/script/wa-link.js?code=170586009041907"></script>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 <script>
