Topbar with number added

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
             style="width: 100vw; height: 100vh;" loop autoplay></lottie-player>
     </div> -->
     <div class="Home">
-        <!-- <div class="topbar">
-            <a href="tel:+91-93435 04739"> <i class="fa fa-phone" aria-hidden="true"></i> <span> +91 93435
+        <div class="topbar">
+            <a  href="tel:+91-93435 04739"> <i class="fa fa-phone" aria-hidden="true"></i> <span class="animated" > +91
+                    93435
                     04739</span></a>
-        </div> -->
+        </div>
         <section class="section1">
             <div class="navbar">
                 <a class="indexreload" href="index.html">
